--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -52,10 +52,10 @@ pt-BR:
     failure:
       already_authenticated: "Você já está logado."
       inactive: "Sua conta ainda não foi ativada."
-      invalid: "Login ou senha inválidos. Dica: Alunos devem utilizar a Matrícula como login. Servidores/Terceirizados devem usar o email."
+      invalid: "Login ou senha inválidos."
       locked: "Sua conta está travada."
       last_attempt: "Você tem mais uma tentativa antes que sua conta seja travada."
-      not_found_in_database: "Login ou senha inválidos. Dica: Alunos devem utilizar a Matrícula como login. Servidores/Terceirizados devem usar o email."
+      not_found_in_database: "Login ou senha inválidos."
       timeout: "Para sua segurança sua sessão expirou. Por favor, faça login novamente."
       unauthenticated: "Você precisa se logar ou registrar antes de prosseguir."
       unconfirmed: "Você precisa confirmar sua conta antes de prosseguir."
