Adicionando gem do simple_form e customizando os formulários. Também adicionado chosen-select.js para personalizar os selects

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -42,8 +42,35 @@ pt-BR:
       gap: " "
       truncate: " "
   errors:
+    format: ! "%{attribute} %{message}"
     messages:
-      not_saved: "Conta já ativada"
+      extension_whitelist_error: "Arquivo deve estar dentre os formatos permitidos"
+      be_difference: "Não pode ser igual a %{attr}."
+      accepted: deve ser aceito
+      blank: "%{attribute}: não pode ficar em branco"
+      present: "%{attribute}: deve ficar em branco"
+      confirmation: "%{attribute}: não é igual a %{attribute}"
+      empty: "%{attribute}: não pode ficar vazio"
+      equal_to: "%{attribute}: deve ser igual a %{count}"
+      even: "%{attribute}: deve ser par"
+      exclusion: "%{attribute}: não está disponível"
+      greater_than: "%{attribute}: deve ser maior que %{count}"
+      greater_than_or_equal_to: "%{attribute}: deve ser maior ou igual a %{count}"
+      inclusion: "%{attribute}: não está incluído na lista"
+      invalid: "%{attribute}: não é válido"
+      less_than: "%{attribute}: deve ser menor que %{count}"
+      less_than_or_equal_to: "%{attribute}: deve ser menor ou igual a %{count}"
+      not_a_number: "%{attribute}: não é um número"
+      not_an_integer: "%{attribute}: não é um número inteiro"
+      odd: "%{attribute}: deve ser ímpar"
+      record_invalid: ! "A validação falhou: %{errors}"
+      restrict_dependent_destroy:
+        one: "Não é possível excluir o registro pois existe um %{record} dependente"
+        many: "Não é possível excluir o registro pois existem %{record} dependentes"
+      taken: "%{attribute}: já foi cadastrado(a)"
+      too_long: ! "é muito longo (máximo: %{count} caracteres)"
+      too_short: ! "é muito curto (mínimo: %{count} caracteres)"
+      wrong_length: "%{attribute}: não possui o tamanho esperado (%{count} caracteres)"
   devise:
     confirmations:
       confirmed: "Sua conta foi confirmada com sucesso."
